2011-05-11  Moritz Bunkus  <moritz@bunkus.org>

	* mkvmerge: bug fix: The 'doc type read version' EBML header field
	is only set to 2 even if a stereo mode other than 'none' is used
	for at least one video track. Fix for bug 625.

2011-05-06  Moritz Bunkus  <moritz@bunkus.org>

	* mkvpropedit: new feature: Added support for adding, replacing
	and removing chapters.

2011-05-03  Moritz Bunkus  <moritz@bunkus.org>

	* All: Avoided a segmentation fault in gcc by not including a
	pre-compiled header if FLAC or CURL support is disabled.

	* mkvmerge: bug fix: Reading DTS files stored in 14-to-16 mode
	were read partially.

2011-04-28  Moritz Bunkus  <moritz@bunkus.org>

	* mkvmerge: enhancement: mkvmerge will rederive frame types for
	VC1 video tracks stored in Matroska files instead of relying on
	the container information. This fixes files created by
	e.g. MakeMKV that mark all frames as key frames even if they
	aren't.

2011-04-26  Moritz Bunkus  <moritz@bunkus.org>

	* mkvmerge: bug fix: Fixed detection of AAC files with ADIF
	headers. Fix for bug 626.

2011-04-25  Moritz Bunkus  <moritz@bunkus.org>

	* mkvmerge: bug fix: The 'doc type version' and 'doc type read
	version' EBML header fields are only set to 3 if a stereo mode
	other than 'none' is used for at least one video track. Fix for
	bug 625.

	* mkvmerge: enhancement: File identification for tracks read from
	Matroska files with a codec ID of "A_MS/ACM" will show the track's
	format tag field if it is unknown to mkvmerge. Implements bug
	624.

2011-04-22  Moritz Bunkus  <moritz@bunkus.org>

	* mkvmerge: new feature: Track, tag and attachment selection via
	--audio-tracks, --video-tracks etc. can have their meaning
	reversed by prefixing the list of IDs with "!". If it is then
	mkvmerge will copy all tracks/tags/attachments but the ones with
	the IDs given to the option (e.g. "--attachments !3,6").

	* mkvmerge: bug fix: Fixed handling AVIs with AAC audio format tag