@@ -1,3 +1,8 @@
+2011-05-23  Moritz Bunkus  <moritz@bunkus.org>
+
+	* mkvmerge: enhancement: Added support for VobSub IDX files with
+	negative "delay" fields.
+
 2011-05-11  Moritz Bunkus  <moritz@bunkus.org>
 
 	* mkvmerge: bug fix: The 'doc type read version' EBML header field
